<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cando_base</name>
  <version>0.1.0</version>
  <description>raspberryPi Stereo Camera using arduCam 4Channel adpter V2.2</description>
  <maintainer email="Miragekimys@gmail.com">yskim</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_calibration_parsers</depend>
  <depend>class_loader</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>ros2_shared</depend>
  <depend>sensor_msgs</depend>

  <!--
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
